--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,19 @@
       rel="stylesheet"
     />
 
+    <link 
+      rel="preconnect" 
+      href="https://fonts.googleapis.com">
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+      crossorigin
+    >
+    <link 
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" 
+      rel="stylesheet"
+    >
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
